--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gen-password",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wrongsky1.github.io/gen-password",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
